# llm_social_science_demo

./: .gitignore  PLAN_DATA_ANALYSIS_AGENT.md  README.md  main.py  pyproject.toml
agents/data_analysis/: README.md  agent.py  main.py  state.py  visualize_graph.py
agents/data_analysis/nodes/: __init__.py  constants.py
agents/data_analysis/nodes/analyze_first_vs_rest/: main.py
agents/data_analysis/nodes/finalize_report/: main.py
agents/data_analysis/nodes/ingest_question/: main.py
agents/data_analysis/nodes/interpret_results/: main.py
agents/data_analysis/nodes/merge_results/: main.py
agents/lit_review/: README.md  agent.py  main.py  mcp.py  nodes.py  report.md  state.py
agents/lit_review/nodes/: __init__.py  constants.py
chat_app/: README.md  __init__.py
chat_app/backend/: .env.example  __init__.py  app.py
chat_app/backend/tests/: conftest.py  test_app.py  test_stream.py
chat_app/ui/: package-lock.json  vite.config.ts
chat_app/ui/src/: App.css  App.tsx  api.ts  main.tsx  types.ts
data/: DATASET_DESCRIPTION.md  dataloader.py
data/smoke_tests/: test_load_local_dataset.py
docs/plans/2026-05-04_sharechat_initial_eda_482391/: plan.md
docs/runbooks/: HOW_TO_RUN_CHAT_APP.md
experiments/: README.md
experiments/initial_eda_2026_05_04/: README.md  __init__.py
experiments/initial_eda_2026_05_04/scripts/: __init__.py  eda_io.py  first_vs_later_user_turn.py  generate_writeups.py  interrogativity_help_seeking.py  language_mix.py  main.py  pronoun_reference.py  thread_length_vs_user_properties.py
lib/: env_vars_loader.py
tests/: test_eda_io.py
(+35 files in other folders)
